--- a/manifest.json
+++ b/manifest.json
@@ -25,6 +25,13 @@
       "matches": ["<all_urls>"]
     }
   ],
+  "content_scripts": [
+    {
+      "matches": ["https://redmine.famishare.jp/*"],
+      "js": ["content-script.js"],
+      "run_at": "document_end"
+    }
+  ],
   "icons": {
     "16": "images/logo_16x16.png",
     "32": "images/logo_32x32.png",
