--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     "scripting",
     "tabs",
     "cookies",
-    "declarativeNetRequest"
+    "declarativeNetRequest",
+    "activeTab"
   ],
   "host_permissions": [
     "<all_urls>"
